--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.1.0",
     "@truffle/hdwallet-provider": "^2.1.15",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "truffle-plugin-verify": "^0.6.7"
   }
 }
