--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "dependencies": {
     "@openzeppelin/contracts": "^5.1.0",
+    "truffle-plugin-verify": "^0.6.7"
+  },
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
     "@truffle/hdwallet-provider": "^2.1.15",
     "dotenv": "^16.4.5",
-    "truffle-plugin-verify": "^0.6.7"
+    "hardhat": "^2.22.15"
   }
 }
