--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "dependencies": {
-    "@openzeppelin/contracts": "^5.1.0",
-    "truffle-plugin-verify": "^0.6.7"
+    "@openzeppelin/contracts": "^5.1.0"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@nomiclabs/hardhat-etherscan": "^3.1.8",
-    "@truffle/hdwallet-provider": "^2.1.15",
-    "dotenv": "^16.4.5",
-    "hardhat": "^2.22.15"
+    "ethereum-waffle": "^4.0.10",
+    "hardhat": "^2.22.15",
+    "ethers": "^5.7.2",
+    "chai": "^4.2.0",
+    "dotenv": "^16.4.5"
   }
 }
