--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@nomiclabs/hardhat-etherscan": "^3.1.8",
-    "ethereum-waffle": "^4.0.10",
-    "hardhat": "^2.22.15",
-    "ethers": "^5.7.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
     "chai": "^4.2.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "ethereum-waffle": "^4.0.10",
+    "ethers": "^5.7.2",
+    "hardhat": "^2.22.15"
   }
 }
