--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
-    "@openzeppelin/contracts": "^5.1.0"
+    "@openzeppelin/contracts": "^5.1.0",
+    "chalk": "^5.3.0"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-etherscan": "^3.1.8",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
-    "chai": "^4.2.0",
+    "chai": "^4.5.0",
     "dotenv": "^16.4.5",
     "ethereum-waffle": "^4.0.10",
     "ethers": "^5.7.2",
